--- a/style.css
+++ b/style.css
@@ -10,17 +10,10 @@
 /* hero background image */
 .bgimage {
     height:100vh;
-    background-image: url('images/jpeg/heroImage.jpeg');
+    background: url('images/heroImage.jpeg');
     background-size:cover;
     position:relative;
 }
-
-@supports (background-image: url('images/avif/heroImage.avif')) {
-    .bgimage {
-        background-image: url('images/avif/heroImage.avif');
-    }
-}
-
 /* text css above hero image*/
 .hero_title {
     font-size: 4.5rem;
